--- a/rsql-jpa-spring-boot-starter/pom.xml
+++ b/rsql-jpa-spring-boot-starter/pom.xml
@@ -28,6 +28,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.github.perplexhub</groupId>
+			<artifactId>rsql-common-test</artifactId>
+			<version>6.0.27-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
