tests are green

--- a/rsql-support/pom.xml
+++ b/rsql-support/pom.xml
@@ -25,9 +25,14 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>io.github.perplexhub</groupId>
+			<artifactId>rsql-common</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
